feat: Update name to Quadri Lateef across the site, enhance the hero availability badge with hover animations, and refine contact section icons.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Lateef Quadri | Senior Product Focused Engineer",
-  "short_name": "Lateef Quadri",
+  "name": "Quadri Lateef | Senior Product Focused Engineer",
+  "short_name": "Quadri Lateef",
   "description": "Portfolio of Quadri Lateef, a Senior Product Focused Engineer specialized in building robust, scalable applications.",
   "start_url": "/",
   "display": "standalone",
